Fix: spacing on case study cards

--- a/version_control/Codurance_September2020/css/modules/case-study-card.css
+++ b/version_control/Codurance_September2020/css/modules/case-study-card.css
@@ -30,7 +30,7 @@
     display: flex;
     margin: 0 auto;
     justify-content: start;
-    max-width: calc(var(--content-max-width) + var(--space-3));
+    max-width: calc(var(--content-max-width) + var(--space-5));
     padding: var(--space-3);
     gap: var(--space-2);
 }
